--- a/css/atlix.css
+++ b/css/atlix.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 		margin: 0;
 	padding: 0;
-    background-color: dodgerblue;
+    background-color: white;
     overflow:hidden;
 }
 
@@ -49,9 +49,9 @@ body {
       }
 
 .blue-navbar img{
-    width: 18%;
-    padding-top: 19%;
-    margin-left: 6%;
+    width: 100%;
+    padding-top: 5.3%;
+    margin-left: 0%;
     position: absolute;
 }
 
@@ -61,7 +61,7 @@ body {
     height: 18%;
     margin: 0;
     padding: 0;
-    margin-top: -5.6%;
+    margin-top: -4.9%;
 }
 
 .saludo{
@@ -172,7 +172,7 @@ header{
     width: 100%;
     max-width: 100%;
     height:0%;
-    background-color: dodgerblue;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
@@ -192,40 +192,6 @@ header{
     width: 7%;
     margin-left: 2%;
     margin-top: 1%;
-}
-
-#texto{
-    padding-left: 6%;
-    padding-right: 6%;
-    text-align: center;
-    background-color: dodgerblue;
-}
-
-
-
-#texto p{
-    color: white;
-    font-family: sans-serif;
-    margin-top: 15%;
-    font-size: 18px;
-    
-}
-
-.slideout-open #texto p{
-        color: white;
-    font-family: sans-serif;
-    margin-top: 5%;
-    font-size: 18px;
-    
-}
-
-.slideout-open #texto{
-        padding-left: 6%;
-    padding-right: 6%;
-    padding-top: 8.3%;
-    text-align: center;
-    background-color: dodgerblue;
-    padding-bottom: .004%;
 }
 
 
@@ -307,12 +273,17 @@ header{
 .w3-left{
     margin-left: 3%;
     margin-bottom: 45%;
-    color: white;
+    color: dodgerblue;
         font-size: 35px;
 }
 
 .w3-right{
     margin-right: 3%;
-    color: white;
+    color: hotpink;
     font-size: 35px;
+}
+
+#moto{
+    width: 100%;
+    margin-top: -.5;
 }
