--- a/css/demo.css
+++ b/css/demo.css
@@ -48,16 +48,16 @@ body {
       }
 
 .blue-navbar img{
-    width: 18%;
-    padding-top: 19%;
-    margin-left: 6%;
+    width: 100%;
+    padding-top:6%;
+    margin-left: %;
     position: absolute;
 }
 
 .blue-navbar{
-    background-color: dodgerblue;
+    background-color: white;
     width: 100%;
-    height: 18%;
+    height: 23%;
     margin: 0;
     padding: 0;
     margin-top: -5.6%;
@@ -83,7 +83,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -18%;
+    margin-top: -26.5%;
     background-color: white;
 }
 
@@ -172,7 +172,7 @@ header{
     width: 100%;
     max-width: 100%;
     height:0%;
-    background-color: dodgerblue;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
