--- a/css/estable.css
+++ b/css/estable.css
@@ -48,16 +48,15 @@ body {
       }
 
 .blue-navbar img{
-    width: 18%;
-    padding-top: 19%;
-    margin-left: 6%;
+    width: 100%;
+    padding-top: 5.4%;
     position: absolute;
 }
 
 .blue-navbar{
-    background-color: dodgerblue;
+    background-color: white;
     width: 100%;
-    height: 18%;
+    height: 20%;
     margin: 0;
     padding: 0;
     margin-top: -5.6%;
@@ -83,7 +82,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -18%;
+    margin-top: -20.7%;
     background-color: white;
 }
 
@@ -172,9 +171,10 @@ header{
     width: 100%;
     max-width: 100%;
     height:0%;
-    background-color: dodgerblue;
+    background-color: white;
     margin: 0;
     padding: 0;
+        margin-bottom: 2%;
 }
 
 #logomenu{
@@ -311,18 +311,21 @@ header{
 }
 
 .category_list .category_item{
-	padding: 15px;
+	padding: 10px;
+    
 	background-color: dodgerblue;
 	text-align: center;
 	text-decoration: none;
 	color: #fff;
     display: inline-block;
-    margin-top: 2%;
-    margin-left: 6.5%;
+    margin-top: 3%;
+    margin-left: .06%;
+    border-radius: 25px;
 }
 
 .category_list .ct_item-active{
 	background: #2D3E50;
+    border-radius: 25px;
 }
 
 /* PRODUCTOS ============*/
@@ -332,6 +335,7 @@ header{
 	display: flex;
 	flex-wrap: wrap;
     margin-top: 2%;
+    
 }
 
 
@@ -340,19 +344,19 @@ header{
 	margin-left: 2.5%;
     margin-bottom: 25px;
     margin-top: 4%;
-	box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.22);
+	box-shadow: 0px 0px 6px 0px rgba(0,0,0,0);
     font-size: 12.5px;
     font-family:sans-serif;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	align-self: flex-start;
-
 	transition: all .4s;
 }
 
 .products-list .product-item img{
 	width: 100%;
+        border-radius: 150px;
 }
 
 .products-list .product-item a{
@@ -360,7 +364,7 @@ header{
 	width: 100%;
 	padding: 8px 0;
 	background: #2D3E50;
-
+    border-radius: 10px;
 	color: #fff;
 	text-align: center;
 	text-decoration: none;
@@ -368,5 +372,9 @@ header{
 
 .panel{
     width: 100%;
+    width: 100%;
 }
 
+#relax{
+    margin-left: 35%;
+}
