--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 	padding: 0;
 	max-height: 100%;
 	max-width: 100%;
-    background-color: dodgerblue;
+    background-color: white;
     overflow:hidden;
 }
 
@@ -16,7 +16,7 @@ body {
         bottom: 0;
         right: 0;
         z-index: 2;
-        width: 73.2%;
+        width: 73.1%;
           height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
@@ -51,19 +51,18 @@ body {
       }
 
 .blue-navbar img{
-    width: 18%;
-    padding-top: 19%;
-    margin-left: 6%;
+    width: 100%;
+    padding-top: 4%;
     position: absolute;
 }
 
 .blue-navbar{
     background-color: dodgerblue;
     width: 100%;
-    height: 18%;
+    height: 17.2%;
     margin: 0;
     padding: 0;
-    margin-top: -5.6%;
+    margin-top: -3.9%;
 }
 
 .saludo{
@@ -87,7 +86,8 @@ body {
     margin: 0;
     padding: 0;
     margin-top: -18%;
-    background-color: lightgray;
+    padding-top: 5%;
+    background-color: white;
 }
 
 
@@ -158,7 +158,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 82%;
+    margin-top: 83%;
     width: 84%;
     padding-bottom: 3.34%;
 }
@@ -174,7 +174,7 @@ header{
     width: 100%;
     max-width: 100%;
     height:0%;
-    background-color: dodgerblue;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
@@ -196,31 +196,6 @@ header{
     margin-top: 1%;
 }
 
-#texto{
-    padding-left: 5%;
-    padding-right: 5%;
-    text-align: center;
-    background-color: dodgerblue;
-    margin-bottom:5%;
-}
-
-#texto h1{
-    font-family:monospace;
-    font-size: 35px;
-    margin-bottom: 0;
-    color: white;
-}
-
-
-
-#texto p{
-    color: white;
-    font-family: sans-serif;
-    margin-top: 4%;
-    font-size: 16px;
-    
-}
-
 .slideout-open #texto p{
         color: white;
     font-family: sans-serif;
@@ -233,7 +208,7 @@ header{
         padding-left: 4%;
     padding-right: 5%;
     text-align: center;
-    background-color: dodgerblue;
+    background-color: white;
 
 }
 
@@ -309,12 +284,26 @@ header{
 .w3-left{
     margin-left: 3%;
     margin-bottom: 30%;
-    color: white;
+    color: dodgerblue;
         font-size: 35px;
 }
 
 .w3-right{
     margin-right: 3%;
-    color: white;
+    color: hotpink;
     font-size: 35px;
+}
+
+#words{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-top: -.1px;
+}
+
+.slideout-open #words
+{
+    width: 110%;
+    margin-top: -.1px;
+    margin-left: -11.6px;
 }
