--- a/css/recom.css
+++ b/css/recom.css
@@ -48,16 +48,15 @@ body {
       }
 
 .blue-navbar img{
-    width: 18%;
-    padding-top: 19%;
-    margin-left: 6%;
+    width: 100%;
+    padding-top: 5.5%;
     position: absolute;
 }
 
 .blue-navbar{
-    background-color: dodgerblue;
+    background-color: white;
     width: 100%;
-    height: 18%;
+    height: 20%;
     margin: 0;
     padding: 0;
     margin-top: -5.6%;
@@ -172,7 +171,7 @@ header{
     width: 100%;
     max-width: 100%;
     height:0%;
-    background-color: dodgerblue;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
