--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,6 @@ body {
         z-index: 1;
           padding: 0;
           margin: 0;
-          height: 100%;
           height: auto;
           margin-bottom: 0%;
           padding-bottom: 0%;
@@ -146,7 +145,7 @@ body {
 }
 
 .redesnav img{
-    margin-top: 75%;
+    margin-top: 80%;
     width: 14%;
     margin-left: 9%;
     margin-right: 9%;
@@ -158,7 +157,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 83%;
+    margin-top: 87%;
     width: 84%;
     padding-bottom: 3.34%;
 }
@@ -278,7 +277,7 @@ header{
 }
 
 #menu3 img{
-    width: 12%;
+    width: 13%;
 }
 
 .w3-left{
@@ -298,12 +297,12 @@ header{
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -.1px;
+    margin-top: -1px;
 }
 
 .slideout-open #words
 {
     width: 110%;
-    margin-top: -.1px;
-    margin-left: -11.6px;
+    margin-top: -1px;
+    margin-left: -13.5px;
 }
