--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 body {        
   width: 100%;
-  height: 100%;
 		margin: 0;
 	padding: 0;
 	max-height: 100%;
 	max-width: 100%;
     background-color: white;
     overflow:hidden;
+    overflow-y: hidden;
 }
 
       .slideout-menu {
@@ -28,7 +28,6 @@ body {
         z-index: 1;
           padding: 0;
           margin: 0;
-          height: auto;
           margin-bottom: 0%;
           padding-bottom: 0%;
       }
@@ -240,7 +239,7 @@ header{
     text-decoration: none;
 }
 
-.submenu{
+.submenu{ 
     display: none;
     text-decoration: none;
 }
