--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ body {
         z-index: 2;
         width: 73.1%;
           height: 100%;
+          max-height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
         display: none;
@@ -28,6 +29,7 @@ body {
         z-index: 1;
           padding: 0;
           margin: 0;
+          max-height: 100%;
           margin-bottom: 0%;
           padding-bottom: 0%;
       }
