--- a/css/atlix.css
+++ b/css/atlix.css
@@ -16,6 +16,7 @@ body {
         z-index: 2;
         width: 73.2%;
           height: 100%;
+          max-height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
         display: none;
@@ -27,6 +28,7 @@ body {
           padding: 0;
           margin: 0;
           height: 100%;
+          max-height: 100%;
           height: auto;
           margin-bottom: 0%;
           padding-bottom: 0%;
@@ -50,13 +52,13 @@ body {
 
 .blue-navbar img{
     width: 100%;
-    padding-top: 5.3%;
+    padding-top: 5.1%;
     margin-left: 0%;
     position: absolute;
 }
 
 .blue-navbar{
-    background-color: dodgerblue;
+    background-color: white;
     width: 100%;
     height: 18%;
     margin: 0;
@@ -84,7 +86,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -18%;
+    margin-top: -19%;
     background-color: lightgray;
 }
 
@@ -144,7 +146,7 @@ body {
 }
 
 .redesnav img{
-    margin-top: 75%;
+    margin-top: 74.5%;
     width: 14%;
     margin-left: 9%;
     margin-right: 9%;
@@ -156,7 +158,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 82%;
+    margin-top: 80%;
     width: 84%;
     padding-bottom: 4%;
 }
