--- a/css/demo.css
+++ b/css/demo.css
@@ -16,6 +16,7 @@ body {
         z-index: 2;
         width: 73.6%;
           height: 100%;
+          max-height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
         display: none;
@@ -27,6 +28,7 @@ body {
           padding: 0;
           margin: 0;
           height: auto;
+          max-height: 100%;
           margin-bottom: 0%;
           padding-bottom: 0%;
       }
@@ -83,7 +85,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -26.5%;
+    margin-top: -30%;
     background-color: white;
 }
 
@@ -144,7 +146,7 @@ body {
 }
 
 .redesnav img{
-    margin-top: 94%;
+    margin-top: 96%;
     width: 14%;
     margin-left: 9%;
     margin-right: 9%;
@@ -156,7 +158,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 103%;
+    margin-top: 101%;
     width: 84%;
     padding-bottom: 4%;
 }
