--- a/css/estable.css
+++ b/css/estable.css
@@ -16,6 +16,7 @@ body {
         z-index: 2;
         width: 73.6%;
           height: 100%;
+          max-height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
         display: none;
@@ -27,6 +28,7 @@ body {
           padding: 0;
           margin: 0;
           height: auto;
+          max-height: 100%;
           margin-bottom: 0%;
           padding-bottom: 0%;
       }
@@ -82,7 +84,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -20.7%;
+    margin-top: -23%;
     background-color: white;
 }
 
@@ -143,7 +145,7 @@ body {
 }
 
 .redesnav img{
-    margin-top: 94%;
+    margin-top: 95%;
     width: 14%;
     margin-left: 9%;
     margin-right: 9%;
@@ -155,7 +157,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 103%;
+    margin-top: 99%;
     width: 84%;
     padding-bottom: 4%;
 }
@@ -311,7 +313,7 @@ header{
 }
 
 .category_list .category_item{
-	padding: 10px;
+	padding: 10.7px;
     font-size: 9.6px;
 	background-color: dodgerblue;
 	text-align: center;
