--- a/css/recom.css
+++ b/css/recom.css
@@ -16,6 +16,7 @@ body {
         z-index: 2;
         width: 73.6%;
           height: 100%;
+          max-height: 100%;
         overflow-y:hidden;
         -webkit-overflow-scrolling: touch;
         display: none;
@@ -29,6 +30,7 @@ body {
           height: auto;
           margin-bottom: 0%;
           padding-bottom: 0%;
+          max-height: 100%;
       }
 
       .slideout-open,
@@ -82,7 +84,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-top: -18%;
+    margin-top: -23%;
     background-color: white;
 }
 
@@ -143,7 +145,7 @@ body {
 }
 
 .redesnav img{
-    margin-top: 94%;
+    margin-top: 95%;
     width: 14%;
     margin-left: 9%;
     margin-right: 9%;
@@ -155,7 +157,7 @@ body {
     padding-left:16%;
     background-color: lightgray;
     height: 10%;
-    margin-top: 103%;
+    margin-top: 100%;
     width: 84%;
     padding-bottom: 4%;
 }
