--- a/css/atlix.css
+++ b/css/atlix.css
@@ -289,3 +289,11 @@ header{
     width: 100%;
     margin-top: -.5;
 }
+
+#pop{
+    position: absolute;
+    z-index: 4;
+    width: 68%;
+    margin-left: 16%;
+    margin-top: -6%;
+}
