--- a/css/estable.css
+++ b/css/estable.css
@@ -27,7 +27,7 @@ body {
         z-index: 1;
           padding: 0;
           margin: 0;
-          height: auto;
+          height: 100%;
           max-height: 100%;
           margin-bottom: 0%;
           padding-bottom: 0%;
@@ -320,7 +320,7 @@ header{
 	text-decoration: none;
 	color: #fff;
     display: inline-block;
-    margin-top: 3%;
+    margin-top: 8%;
     margin-left: .9%;
     border-radius: 25px;
 }
@@ -336,7 +336,7 @@ header{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-    margin-top: 2%;
+    margin-top: 0%;
     
 }
 
